[project]
name = "website-rag-agent"
version = "0.1.0"
description = "RAG agent for websites using LangChain, Chroma, and LangGraph"
authors = [
    { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["RAG", "LangChain", "Chroma", "LangGraph", "AI"]

[project.dependencies]
python-dotenv = "^1.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"
langchain = "^1.0"
chromadb = "^0.3.33"
langchain-community = "^0.0.300" 
click = "^8.2"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
