[project]
name = "acorre-langgraph1"
version = "0.1.0"
description = "LangGraph project with Pinecone RAG ingestion + query"
authors = [{ name = "R" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-pinecone",
    "langchain-community",
    "pinecone-client>=3.0.0",
    "python-dotenv",
    "pypdf",
    "unstructured",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.langgraph]
# 👇 The CLI only looks here
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-pinecone",
    "langchain-community",
    "pinecone-client>=3.0.0",
    "python-dotenv",
    "pypdf",
    "unstructured",
]
